examples/good/13-02-functions-nested.dog
int g() {
    int g() {
        return 5;
    }

    return g();
}

yeet g();