examples/bad/12-10-return-missing.dog
int fun() {
    if (false) {
        return 5;
    }
}

fun();